# ComputerArchitecture4

./: CMakeLists.txt  main.cpp  makefile  myThread.h  server.cpp
client/: client.cpp  makefile
connection/: connection.h
socket/: TCPSocket.cpp  TCPSocket.h
tcp_server/: asioTcpServer.h
tests/: packing.cpp  sockets.cpp  test_suit.cpp
thread/: myThread.cpp
